fix event pre-html spacing on archive template

--- a/wp-content/themes/astra-child/assets/scss/modules/gravity-forms.scss
+++ b/wp-content/themes/astra-child/assets/scss/modules/gravity-forms.scss
@@ -14,7 +14,7 @@
 
 .post-type-archive-tribe_events .tribe-events-before-html {
   max-width: 700px;
-  margin: auto;
+  margin: 1rem auto 2rem auto;
 }
 
 /* The subscribe form (id 33) */
